--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{require_otp_vsn, "R15|R16|17|18|19|20"}.
+{require_otp_vsn, "R15|R16|17|18|19|20|21"}.
 
 {cover_enabled, true}.
 
@@ -10,7 +10,8 @@
     {platform_define, "^[0-9]+", namespaced_types},
     {platform_define, "(?=^[0-9]+)(?!^17)", deprecated_now},
     {platform_define, "^19", deprecated_19},
-    {platform_define, "^20", deprecated_19}
+    {platform_define, "^20", deprecated_19},
+    {platform_define, "^21", deprecated_19}
 ]}.
 
 {deps, [
